# labparse-cli

./: BENCHMARKS.md  Cargo.toml  LICENSE  LONGEVX_DESIGN.md  README.md  fuzzy_match.py  labparse_vision.py
.claude/: handoff.md
data/: biomarker_definitions.csv  biomarkers.toml
data/embeddings/: biomarker_embeddings.npy  index.json
src/: biomarkers.rs  catalog.rs  cli.rs  errors.rs  main.rs  normalize.rs  validate.rs
src/output/: json.rs  mod.rs  table.rs
src/parsers/: csv_parser.rs  mod.rs  pdf_parser.rs  text_parser.rs
tests/: cli_tests.rs
