[package]
name = "labparse"
version = "0.1.0"
edition = "2021"
description = "Parse lab results into structured biomarker JSON"
authors = ["Boris Djordjevic <boris@199biotechnologies.com>"]
repository = "https://github.com/199-biotechnologies/labparse-cli"
homepage = "https://github.com/199-biotechnologies/labparse-cli"
license = "Proprietary"

[[bin]]
name = "labparse"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
comfy-table = "7"
owo-colors = "4"
csv = "1"
regex = "1"
once_cell = "1"
toml = "0.8"
dirs = "5"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
strip = true
